--- a/scss/_suppliers.scss
+++ b/scss/_suppliers.scss
@@ -59,6 +59,7 @@
     position: relative;
 
     &-partnership-text-img {
+        width: 100%;
         max-width: 55.5rem;
         position: absolute;
 
