--- a/scss/_target-audience.scss
+++ b/scss/_target-audience.scss
@@ -1,17 +1,17 @@
 /* ----------------------- TARGET AUDIENCE CONTAINER ----------------------- */
 .target-audience-bg {
     position: relative;
-    overflow: visible;
+    overflow: hidden;
     &-plus {
         position: absolute;
-        bottom: -.8rem;
+        bottom: 0;
         left: 42.5%;
     }
 }
 
-.target-audience-content-wrapper {
-    overflow: hidden;
-}
+// .target-audience-content-wrapper {
+//     overflow: hidden;
+// }
 
 .target-audience-section {
     margin-top: 2rem;
@@ -21,11 +21,13 @@
     justify-content: space-between;
 
     .decorative-img-1 {
+        width: 100%;
         max-width: 26rem;
         z-index: 3;
     }
 
     .decorative-img-2 {
+        width: 100%;
         max-width: 30rem;
         z-index: 3;
     }
@@ -33,13 +35,15 @@
     
 
     &-info {
-        width: 30.5rem;
+        width: fit-content;
+        max-width: 30.5rem;
         position: relative;
         z-index: 0;
 
         &-developers-text-img {
-            position: absolute;
+            width: 100%;
             max-width: 53.75rem;
+            position: absolute;
             top: -3.75rem;
             right: -10rem;
 
@@ -103,6 +107,20 @@
 }
 
 @media (max-width: 1023px) {
+    .target-audience-section {
+        align-items: center;
+
+        &-developers {
+            flex-direction: column;
+        }
+        &-business {
+            flex-direction: column-reverse;
+        }
+    }
+}
+
+
+@media (max-width: 767px) {
     .target-audience-section {
         align-items: center;
 
