--- a/scss/_connection.scss
+++ b/scss/_connection.scss
@@ -30,7 +30,8 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    width: 62.5rem;
+    max-width: 62.5rem;
+    width: 100%;
 
     position: relative;
 
@@ -66,6 +67,8 @@
 
     &-instruction {
         padding-top: .8rem;
+        max-width: 36.5rem;
+        width: 100%;
         display: flex;
         flex-direction: column;
 
@@ -79,6 +82,10 @@
             display: flex;
             align-items: flex-start;
             margin-bottom: 1rem;
+
+            &-number {
+                min-width: 2.4rem;
+            }
     
             &-text {
                 width: 32.25rem;
@@ -97,5 +104,21 @@
         position: absolute;
         right: -10.5rem;
         top: -.5rem;
+    }
+}
+
+@media (max-width: 1023px) {
+    .connection {
+        padding: 0 1rem;
+    }
+
+    .connection-section {
+        flex-direction: column;
+
+        &-title {
+            h3 {
+                margin-left: 0;
+            }
+        }
     }
 }
