--- a/scss/_existing-clients.scss
+++ b/scss/_existing-clients.scss
@@ -45,3 +45,9 @@
         text-align: center;
     }
 }
+
+@media (max-width: 1023px) {
+    .existing-clients-card {
+        width: 17.5rem;
+    }
+}
