--- a/scss/_onboarding.scss
+++ b/scss/_onboarding.scss
@@ -106,8 +106,49 @@
     }
 }
 
+@media (max-width: 767px) {
+    .onboarding {
+        max-width: none;
+        margin: 9rem 1rem 0;
+
+        h3 {
+            font-size: 1.125rem;
+            line-height: 1.5rem;
+            max-width: 80%;
+        }
+        h1 {
+            font-size: 2.125rem;
+            line-height: 2.25rem;
+            margin: 1.75rem 0 0;
+            max-width: none;
+        }
+
+        &-image {
+            height: 8rem;
+            width: 5.75rem;
+
+            top: -9rem;
+            right: unset;
+
+            overflow: hidden;
+    
+            &-round-letters {
+                display: none;
+            }
+        
+            &-arrow {
+                width: 5.75rem;
+                position: absolute;
+                bottom: 0;
+            }
+        }
+    }
+}
+
 // ANIMATED BUTTON
 .onboarding-button {
+    width: auto;
+    box-sizing: border-box;
     position: fixed;
     color: #fff !important;
     left: 10.5%;
@@ -128,5 +169,37 @@
         position: absolute;
         right: 3.6rem;
         top: 9.5rem;
+    }
+
+    &-big {
+        padding: 1rem 2rem;
+    }
+
+    &-small {
+        opacity: 1;
+        left: 2rem;
+        padding: 1rem;
+        bottom: 15%;
+        width: min-content !important
+    }
+}
+
+@media (max-width: 425px) {
+    .onboarding-button {
+        width: 90%;
+        left: 5%;
+        bottom: 2.5rem;
+    
+        &-arrow {
+            max-width: 8.563rem;
+    
+            position: absolute;
+            right: 3.6rem;
+            top: 9.5rem;
+        }
+
+        &-small {
+            width: min-content !important;
+        }
     }
 }
