Added adaptiveness for catalog page, adjusted styles for a API page

--- a/scss/_connection.scss
+++ b/scss/_connection.scss
@@ -74,7 +74,8 @@
 
         &-title {
             font-size: 1.125rem;
-            width: 34.5rem;
+            max-width: 34.5rem;
+            width: 100%;
             margin-bottom: 1.5rem;
         }
 
